--- a/debian/control
+++ b/debian/control
@@ -6,8 +6,7 @@ Uploaders: Hilmar Preuße <hille42@debian.org>
 Rules-Requires-Root: no
 Build-Depends:
  debhelper-compat (= 13),
- cmake,
- libmimalloc-dev
+ cmake
 Standards-Version: 4.6.2
 Homepage: https://github.com/contextgarden/luametatex
 Vcs-Browser: https://github.com/debian-tex/luametatex
